@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-19
+2014-08-08 David Schneider
+- update DumpDgram to work with offsets in XtcInput::DgramList
+
 Tag: V00-04-18
 2014-07-18 David Schneider
 - add DumpDgram to show how to work with XtcInput::DgramList
